<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/webTitle"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/titleColor"
        android:text="@string/webTitle"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/publishDate"
        android:text="@string/publishDate"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sectionName"
        android:text="@string/sectionName"/>
</LinearLayout>